# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65]) 

AC_INIT(Rtwobitlib)

AC_CHECK_LIB(crypto, SHA1, ,
AC_MSG_ERROR(openssl header files not found!

Please refer to the INSTALL file included in the Rtwobitlib package for how to install openssl & header files on your system.
)
)

AC_OUTPUT
